parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> function
Rule 2     function -> VOID identifier formal_parameters block
Rule 3     function -> identifier identifier formal_parameters block
Rule 4     block -> body
Rule 5     block -> types body
Rule 6     block -> labels body
Rule 7     block -> variables body
Rule 8     block -> functions body
Rule 9     block -> variables functions body
Rule 10    block -> types functions body
Rule 11    block -> types variables body
Rule 12    block -> labels functions body
Rule 13    block -> labels variables body
Rule 14    block -> labels types body
Rule 15    block -> types variables functions body
Rule 16    block -> labels variables functions body
Rule 17    block -> labels types variables body
Rule 18    block -> labels types functions body
Rule 19    block -> labels types variables functions body
Rule 20    body -> LBRACE statements RBRACE
Rule 21    statements -> <empty>
Rule 22    statements -> statement statements
Rule 23    variables -> VARS variables_n
Rule 24    variables_n -> identifier_list COLON vartype SCOLON
Rule 25    variables_n -> identifier_list COLON vartype SCOLON variables_n
Rule 26    types -> TYPES types_n
Rule 27    types_n -> identifier ASSIGN vartype SCOLON
Rule 28    types_n -> identifier ASSIGN vartype SCOLON types_n
Rule 29    functions -> FUNCTIONS functions_n
Rule 30    functions_n -> function
Rule 31    functions_n -> function functions_n
Rule 32    statement -> compound
Rule 33    statement -> unlabeled_statement
Rule 34    statement -> identifier COLON compound
Rule 35    statement -> identifier COLON unlabeled_statement
Rule 36    unlabeled_statement -> empty_statement
Rule 37    unlabeled_statement -> repetitive
Rule 38    unlabeled_statement -> conditional
Rule 39    unlabeled_statement -> return_rule
Rule 40    unlabeled_statement -> goto
Rule 41    unlabeled_statement -> function_call_statement
Rule 42    unlabeled_statement -> assignment
Rule 43    unlabeled_statements -> unlabeled_statement
Rule 44    unlabeled_statements -> unlabeled_statement unlabeled_statements
Rule 45    goto -> GOTO identifier SCOLON
Rule 46    return_rule -> RETURN SCOLON
Rule 47    return_rule -> RETURN expression SCOLON
Rule 48    empty_statement -> SCOLON
Rule 49    conditional -> IF LPAREN expression RPAREN compound
Rule 50    conditional -> IF LPAREN expression RPAREN compound ELSE compound
Rule 51    repetitive -> WHILE expression compound
Rule 52    compound -> LBRACE unlabeled_statements RBRACE
Rule 53    assignment -> variable ASSIGN expression SCOLON
Rule 54    formal_parameters -> LPAREN formal_parameters_n RPAREN
Rule 55    formal_parameters_n -> formal_parameter SCOLON formal_parameters_n
Rule 56    formal_parameters_n -> formal_parameter
Rule 57    formal_parameters_n -> <empty>
Rule 58    formal_parameter -> function_parameter
Rule 59    formal_parameter -> expression_parameter
Rule 60    expression_parameter -> VAR identifier_list COLON identifier
Rule 61    expression_parameter -> identifier_list COLON identifier
Rule 62    function_parameter -> VOID identifier formal_parameters
Rule 63    function_parameter -> identifier identifier formal_parameters
Rule 64    identifier_list -> identifier COMMA identifier_list
Rule 65    identifier_list -> identifier
Rule 66    variable -> ID LBRACKET expression RBRACKET
Rule 67    variable -> ID
Rule 68    vartype -> identifier
Rule 69    labels -> LABELS identifier_list SCOLON
Rule 70    factor -> function_call
Rule 71    factor -> integer
Rule 72    factor -> variable
Rule 73    factor -> NOT factor
Rule 74    factor -> LPAREN expression RPAREN
Rule 75    additive_operator -> OR
Rule 76    additive_operator -> MINUS  [precedence=left, level=1]
Rule 77    additive_operator -> PLUS  [precedence=left, level=1]
Rule 78    multiplicative_operator -> AND
Rule 79    multiplicative_operator -> DIVIDE  [precedence=left, level=2]
Rule 80    multiplicative_operator -> TIMES  [precedence=left, level=2]
Rule 81    relational_operator -> GREATER
Rule 82    relational_operator -> GEQ
Rule 83    relational_operator -> LEQ
Rule 84    relational_operator -> LESS
Rule 85    relational_operator -> NEQ
Rule 86    relational_operator -> EQUAL
Rule 87    mulop_term -> multiplicative_operator factor mulop_term
Rule 88    mulop_term -> <empty>
Rule 89    term -> factor mulop_term
Rule 90    function_call_statement -> function_call
Rule 91    function_call -> identifier LPAREN expression_list RPAREN
Rule 92    expression_list -> <empty>
Rule 93    expression_list -> expression expression_list_n
Rule 94    expression_list_n -> <empty>
Rule 95    expression_list_n -> COMMA expression_list
Rule 96    expression -> simple_expression
Rule 97    expression -> simple_expression relational_operator simple_expression
Rule 98    simple_expression_n -> additive_operator term simple_expression_n
Rule 99    simple_expression_n -> <empty>
Rule 100   simple_expression -> term simple_expression_n
Rule 101   simple_expression -> MINUS term simple_expression_n  [precedence=left, level=1]
Rule 102   simple_expression -> PLUS term simple_expression_n  [precedence=left, level=1]
Rule 103   identifier -> WRITE
Rule 104   identifier -> READ
Rule 105   identifier -> FALSE
Rule 106   identifier -> TRUE
Rule 107   identifier -> BOOLEAN
Rule 108   identifier -> INTEGER
Rule 109   identifier -> ID
Rule 110   integer -> NUMBER

Terminals, with rules where they appear:

AND                  : 78
ASSIGN               : 27 28 53
BOOLEAN              : 107
COLON                : 24 25 34 35 60 61
COMMA                : 64 95
DIVIDE               : 79
ELSE                 : 50
EQUAL                : 86
FALSE                : 105
FUNCTIONS            : 29
GEQ                  : 82
GOTO                 : 45
GREATER              : 81
ID                   : 66 67 109
IF                   : 49 50
INTEGER              : 108
LABELS               : 69
LBRACE               : 20 52
LBRACKET             : 66
LEQ                  : 83
LESS                 : 84
LPAREN               : 49 50 54 74 91
MINUS                : 76 101
NEQ                  : 85
NOT                  : 73
NUMBER               : 110
OR                   : 75
PLUS                 : 77 102
RBRACE               : 20 52
RBRACKET             : 66
READ                 : 104
RETURN               : 46 47
RPAREN               : 49 50 54 74 91
SCOLON               : 24 25 27 28 45 46 47 48 53 55 69
TIMES                : 80
TRUE                 : 106
TYPES                : 26
VAR                  : 60
VARS                 : 23
VOID                 : 2 62
WHILE                : 51
WRITE                : 103
error                : 

Nonterminals, with rules where they appear:

additive_operator    : 98
assignment           : 42
block                : 2 3
body                 : 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19
compound             : 32 34 49 50 50 51
conditional          : 38
empty_statement      : 36
expression           : 47 49 50 51 53 66 74 93
expression_list      : 91 95
expression_list_n    : 93
expression_parameter : 59
factor               : 73 87 89
formal_parameter     : 55 56
formal_parameters    : 2 3 62 63
formal_parameters_n  : 54 55
function             : 1 30 31
function_call        : 70 90
function_call_statement : 41
function_parameter   : 58
functions            : 8 9 10 12 15 16 18 19
functions_n          : 29 31
goto                 : 40
identifier           : 2 3 3 27 28 34 35 45 60 61 62 63 63 64 65 68 91
identifier_list      : 24 25 60 61 64 69
integer              : 71
labels               : 6 12 13 14 16 17 18 19
mulop_term           : 87 89
multiplicative_operator : 87
program              : 0
relational_operator  : 97
repetitive           : 37
return_rule          : 39
simple_expression    : 96 97 97
simple_expression_n  : 98 100 101 102
statement            : 22
statements           : 20 22
term                 : 98 100 101 102
types                : 5 10 11 14 15 17 18 19
types_n              : 26 28
unlabeled_statement  : 33 35 43 44
unlabeled_statements : 44 52
variable             : 53 72
variables            : 7 9 11 13 15 16 17 19
variables_n          : 23 25
vartype              : 24 25 27 28


state 0

    (0) S' -> . program
    (1) program -> . function
    (2) function -> . VOID identifier formal_parameters block
    (3) function -> . identifier identifier formal_parameters block
    (103) identifier -> . WRITE
    (104) identifier -> . READ
    (105) identifier -> . FALSE
    (106) identifier -> . TRUE
    (107) identifier -> . BOOLEAN
    (108) identifier -> . INTEGER
    (109) identifier -> . ID
    VOID            shift and go to state 3
    WRITE           shift and go to state 5
    READ            shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    BOOLEAN         shift and go to state 9
    INTEGER         shift and go to state 10
    ID              shift and go to state 11

    program                        shift and go to state 1
    function                       shift and go to state 2
    identifier                     shift and go to state 4

state 1

    (0) S' -> program .


state 2

    (1) program -> function .
    $end            reduce using rule 1 (program -> function .)


state 3

    (2) function -> VOID . identifier formal_parameters block
    (103) identifier -> . WRITE
    (104) identifier -> . READ
    (105) identifier -> . FALSE
    (106) identifier -> . TRUE
    (107) identifier -> . BOOLEAN
    (108) identifier -> . INTEGER
    (109) identifier -> . ID
    WRITE           shift and go to state 5
    READ            shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    BOOLEAN         shift and go to state 9
    INTEGER         shift and go to state 10
    ID              shift and go to state 11

    identifier                     shift and go to state 12

state 4

    (3) function -> identifier . identifier formal_parameters block
    (103) identifier -> . WRITE
    (104) identifier -> . READ
    (105) identifier -> . FALSE
    (106) identifier -> . TRUE
    (107) identifier -> . BOOLEAN
    (108) identifier -> . INTEGER
    (109) identifier -> . ID
    WRITE           shift and go to state 5
    READ            shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    BOOLEAN         shift and go to state 9
    INTEGER         shift and go to state 10
    ID              shift and go to state 11

    identifier                     shift and go to state 13

state 5

    (103) identifier -> WRITE .
    WRITE           reduce using rule 103 (identifier -> WRITE .)
    READ            reduce using rule 103 (identifier -> WRITE .)
    FALSE           reduce using rule 103 (identifier -> WRITE .)
    TRUE            reduce using rule 103 (identifier -> WRITE .)
    BOOLEAN         reduce using rule 103 (identifier -> WRITE .)
    INTEGER         reduce using rule 103 (identifier -> WRITE .)
    ID              reduce using rule 103 (identifier -> WRITE .)
    LPAREN          reduce using rule 103 (identifier -> WRITE .)
    COMMA           reduce using rule 103 (identifier -> WRITE .)
    COLON           reduce using rule 103 (identifier -> WRITE .)
    ASSIGN          reduce using rule 103 (identifier -> WRITE .)
    SCOLON          reduce using rule 103 (identifier -> WRITE .)
    RPAREN          reduce using rule 103 (identifier -> WRITE .)


state 6

    (104) identifier -> READ .
    WRITE           reduce using rule 104 (identifier -> READ .)
    READ            reduce using rule 104 (identifier -> READ .)
    FALSE           reduce using rule 104 (identifier -> READ .)
    TRUE            reduce using rule 104 (identifier -> READ .)
    BOOLEAN         reduce using rule 104 (identifier -> READ .)
    INTEGER         reduce using rule 104 (identifier -> READ .)
    ID              reduce using rule 104 (identifier -> READ .)
    LPAREN          reduce using rule 104 (identifier -> READ .)
    COMMA           reduce using rule 104 (identifier -> READ .)
    COLON           reduce using rule 104 (identifier -> READ .)
    ASSIGN          reduce using rule 104 (identifier -> READ .)
    SCOLON          reduce using rule 104 (identifier -> READ .)
    RPAREN          reduce using rule 104 (identifier -> READ .)


state 7

    (105) identifier -> FALSE .
    WRITE           reduce using rule 105 (identifier -> FALSE .)
    READ            reduce using rule 105 (identifier -> FALSE .)
    FALSE           reduce using rule 105 (identifier -> FALSE .)
    TRUE            reduce using rule 105 (identifier -> FALSE .)
    BOOLEAN         reduce using rule 105 (identifier -> FALSE .)
    INTEGER         reduce using rule 105 (identifier -> FALSE .)
    ID              reduce using rule 105 (identifier -> FALSE .)
    LPAREN          reduce using rule 105 (identifier -> FALSE .)
    COMMA           reduce using rule 105 (identifier -> FALSE .)
    COLON           reduce using rule 105 (identifier -> FALSE .)
    ASSIGN          reduce using rule 105 (identifier -> FALSE .)
    SCOLON          reduce using rule 105 (identifier -> FALSE .)
    RPAREN          reduce using rule 105 (identifier -> FALSE .)


state 8

    (106) identifier -> TRUE .
    WRITE           reduce using rule 106 (identifier -> TRUE .)
    READ            reduce using rule 106 (identifier -> TRUE .)
    FALSE           reduce using rule 106 (identifier -> TRUE .)
    TRUE            reduce using rule 106 (identifier -> TRUE .)
    BOOLEAN         reduce using rule 106 (identifier -> TRUE .)
    INTEGER         reduce using rule 106 (identifier -> TRUE .)
    ID              reduce using rule 106 (identifier -> TRUE .)
    LPAREN          reduce using rule 106 (identifier -> TRUE .)
    COMMA           reduce using rule 106 (identifier -> TRUE .)
    COLON           reduce using rule 106 (identifier -> TRUE .)
    ASSIGN          reduce using rule 106 (identifier -> TRUE .)
    SCOLON          reduce using rule 106 (identifier -> TRUE .)
    RPAREN          reduce using rule 106 (identifier -> TRUE .)


state 9

    (107) identifier -> BOOLEAN .
    WRITE           reduce using rule 107 (identifier -> BOOLEAN .)
    READ            reduce using rule 107 (identifier -> BOOLEAN .)
    FALSE           reduce using rule 107 (identifier -> BOOLEAN .)
    TRUE            reduce using rule 107 (identifier -> BOOLEAN .)
    BOOLEAN         reduce using rule 107 (identifier -> BOOLEAN .)
    INTEGER         reduce using rule 107 (identifier -> BOOLEAN .)
    ID              reduce using rule 107 (identifier -> BOOLEAN .)
    LPAREN          reduce using rule 107 (identifier -> BOOLEAN .)
    COMMA           reduce using rule 107 (identifier -> BOOLEAN .)
    COLON           reduce using rule 107 (identifier -> BOOLEAN .)
    ASSIGN          reduce using rule 107 (identifier -> BOOLEAN .)
    SCOLON          reduce using rule 107 (identifier -> BOOLEAN .)
    RPAREN          reduce using rule 107 (identifier -> BOOLEAN .)


state 10

    (108) identifier -> INTEGER .
    WRITE           reduce using rule 108 (identifier -> INTEGER .)
    READ            reduce using rule 108 (identifier -> INTEGER .)
    FALSE           reduce using rule 108 (identifier -> INTEGER .)
    TRUE            reduce using rule 108 (identifier -> INTEGER .)
    BOOLEAN         reduce using rule 108 (identifier -> INTEGER .)
    INTEGER         reduce using rule 108 (identifier -> INTEGER .)
    ID              reduce using rule 108 (identifier -> INTEGER .)
    LPAREN          reduce using rule 108 (identifier -> INTEGER .)
    COMMA           reduce using rule 108 (identifier -> INTEGER .)
    COLON           reduce using rule 108 (identifier -> INTEGER .)
    ASSIGN          reduce using rule 108 (identifier -> INTEGER .)
    SCOLON          reduce using rule 108 (identifier -> INTEGER .)
    RPAREN          reduce using rule 108 (identifier -> INTEGER .)


state 11

    (109) identifier -> ID .
    WRITE           reduce using rule 109 (identifier -> ID .)
    READ            reduce using rule 109 (identifier -> ID .)
    FALSE           reduce using rule 109 (identifier -> ID .)
    TRUE            reduce using rule 109 (identifier -> ID .)
    BOOLEAN         reduce using rule 109 (identifier -> ID .)
    INTEGER         reduce using rule 109 (identifier -> ID .)
    ID              reduce using rule 109 (identifier -> ID .)
    LPAREN          reduce using rule 109 (identifier -> ID .)
    COMMA           reduce using rule 109 (identifier -> ID .)
    COLON           reduce using rule 109 (identifier -> ID .)
    ASSIGN          reduce using rule 109 (identifier -> ID .)
    SCOLON          reduce using rule 109 (identifier -> ID .)
    RPAREN          reduce using rule 109 (identifier -> ID .)


state 12

    (2) function -> VOID identifier . formal_parameters block
    (54) formal_parameters -> . LPAREN formal_parameters_n RPAREN
    LPAREN          shift and go to state 15

    formal_parameters              shift and go to state 14

state 13

    (3) function -> identifier identifier . formal_parameters block
    (54) formal_parameters -> . LPAREN formal_parameters_n RPAREN
    LPAREN          shift and go to state 15

    formal_parameters              shift and go to state 16

state 14

    (2) function -> VOID identifier formal_parameters . block
    (4) block -> . body
    (5) block -> . types body
    (6) block -> . labels body
    (7) block -> . variables body
    (8) block -> . functions body
    (9) block -> . variables functions body
    (10) block -> . types functions body
    (11) block -> . types variables body
    (12) block -> . labels functions body
    (13) block -> . labels variables body
    (14) block -> . labels types body
    (15) block -> . types variables functions body
    (16) block -> . labels variables functions body
    (17) block -> . labels types variables body
    (18) block -> . labels types functions body
    (19) block -> . labels types variables functions body
    (20) body -> . LBRACE statements RBRACE
    (26) types -> . TYPES types_n
    (69) labels -> . LABELS identifier_list SCOLON
    (23) variables -> . VARS variables_n
    (29) functions -> . FUNCTIONS functions_n
    LBRACE          shift and go to state 23
    TYPES           shift and go to state 24
    LABELS          shift and go to state 25
    VARS            shift and go to state 26
    FUNCTIONS       shift and go to state 27

    block                          shift and go to state 17
    body                           shift and go to state 18
    types                          shift and go to state 19
    labels                         shift and go to state 20
    variables                      shift and go to state 21
    functions                      shift and go to state 22

state 15

    (54) formal_parameters -> LPAREN . formal_parameters_n RPAREN
    (55) formal_parameters_n -> . formal_parameter SCOLON formal_parameters_n
    (56) formal_parameters_n -> . formal_parameter
    (57) formal_parameters_n -> .
    (58) formal_parameter -> . function_parameter
    (59) formal_parameter -> . expression_parameter
    (62) function_parameter -> . VOID identifier formal_parameters
    (63) function_parameter -> . identifier identifier formal_parameters
    (60) expression_parameter -> . VAR identifier_list COLON identifier
    (61) expression_parameter -> . identifier_list COLON identifier
    (103) identifier -> . WRITE
    (104) identifier -> . READ
    (105) identifier -> . FALSE
    (106) identifier -> . TRUE
    (107) identifier -> . BOOLEAN
    (108) identifier -> . INTEGER
    (109) identifier -> . ID
    (64) identifier_list -> . identifier COMMA identifier_list
    (65) identifier_list -> . identifier
    RPAREN          reduce using rule 57 (formal_parameters_n -> .)
    VOID            shift and go to state 32
    VAR             shift and go to state 34
    WRITE           shift and go to state 5
    READ            shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    BOOLEAN         shift and go to state 9
    INTEGER         shift and go to state 10
    ID              shift and go to state 11

    formal_parameters_n            shift and go to state 28
    formal_parameter               shift and go to state 29
    function_parameter             shift and go to state 30
    expression_parameter           shift and go to state 31
    identifier                     shift and go to state 33
    identifier_list                shift and go to state 35

state 16

    (3) function -> identifier identifier formal_parameters . block
    (4) block -> . body
    (5) block -> . types body
    (6) block -> . labels body
    (7) block -> . variables body
    (8) block -> . functions body
    (9) block -> . variables functions body
    (10) block -> . types functions body
    (11) block -> . types variables body
    (12) block -> . labels functions body
    (13) block -> . labels variables body
    (14) block -> . labels types body
    (15) block -> . types variables functions body
    (16) block -> . labels variables functions body
    (17) block -> . labels types variables body
    (18) block -> . labels types functions body
    (19) block -> . labels types variables functions body
    (20) body -> . LBRACE statements RBRACE
    (26) types -> . TYPES types_n
    (69) labels -> . LABELS identifier_list SCOLON
    (23) variables -> . VARS variables_n
    (29) functions -> . FUNCTIONS functions_n
    LBRACE          shift and go to state 23
    TYPES           shift and go to state 24
    LABELS          shift and go to state 25
    VARS            shift and go to state 26
    FUNCTIONS       shift and go to state 27

    block                          shift and go to state 36
    body                           shift and go to state 18
    types                          shift and go to state 19
    labels                         shift and go to state 20
    variables                      shift and go to state 21
    functions                      shift and go to state 22

state 17

    (2) function -> VOID identifier formal_parameters block .
    $end            reduce using rule 2 (function -> VOID identifier formal_parameters block .)
    VOID            reduce using rule 2 (function -> VOID identifier formal_parameters block .)
    WRITE           reduce using rule 2 (function -> VOID identifier formal_parameters block .)
    READ            reduce using rule 2 (function -> VOID identifier formal_parameters block .)
    FALSE           reduce using rule 2 (function -> VOID identifier formal_parameters block .)
    TRUE            reduce using rule 2 (function -> VOID identifier formal_parameters block .)
    BOOLEAN         reduce using rule 2 (function -> VOID identifier formal_parameters block .)
    INTEGER         reduce using rule 2 (function -> VOID identifier formal_parameters block .)
    ID              reduce using rule 2 (function -> VOID identifier formal_parameters block .)
    LBRACE          reduce using rule 2 (function -> VOID identifier formal_parameters block .)


state 18

    (4) block -> body .
    $end            reduce using rule 4 (block -> body .)
    VOID            reduce using rule 4 (block -> body .)
    WRITE           reduce using rule 4 (block -> body .)
    READ            reduce using rule 4 (block -> body .)
    FALSE           reduce using rule 4 (block -> body .)
    TRUE            reduce using rule 4 (block -> body .)
    BOOLEAN         reduce using rule 4 (block -> body .)
    INTEGER         reduce using rule 4 (block -> body .)
    ID              reduce using rule 4 (block -> body .)
    LBRACE          reduce using rule 4 (block -> body .)


state 19

    (5) block -> types . body
    (10) block -> types . functions body
    (11) block -> types . variables body
    (15) block -> types . variables functions body
    (20) body -> . LBRACE statements RBRACE
    (29) functions -> . FUNCTIONS functions_n
    (23) variables -> . VARS variables_n
    LBRACE          shift and go to state 23
    FUNCTIONS       shift and go to state 27
    VARS            shift and go to state 26

    body                           shift and go to state 37
    functions                      shift and go to state 38
    variables                      shift and go to state 39

state 20

    (6) block -> labels . body
    (12) block -> labels . functions body
    (13) block -> labels . variables body
    (14) block -> labels . types body
    (16) block -> labels . variables functions body
    (17) block -> labels . types variables body
    (18) block -> labels . types functions body
    (19) block -> labels . types variables functions body
    (20) body -> . LBRACE statements RBRACE
    (29) functions -> . FUNCTIONS functions_n
    (23) variables -> . VARS variables_n
    (26) types -> . TYPES types_n
    LBRACE          shift and go to state 23
    FUNCTIONS       shift and go to state 27
    VARS            shift and go to state 26
    TYPES           shift and go to state 24

    body                           shift and go to state 40
    functions                      shift and go to state 41
    variables                      shift and go to state 42
    types                          shift and go to state 43

state 21

    (7) block -> variables . body
    (9) block -> variables . functions body
    (20) body -> . LBRACE statements RBRACE
    (29) functions -> . FUNCTIONS functions_n
    LBRACE          shift and go to state 23
    FUNCTIONS       shift and go to state 27

    body                           shift and go to state 44
    functions                      shift and go to state 45

state 22

    (8) block -> functions . body
    (20) body -> . LBRACE statements RBRACE
    LBRACE          shift and go to state 23

    body                           shift and go to state 46

state 23

    (20) body -> LBRACE . statements RBRACE
    (21) statements -> .
    (22) statements -> . statement statements
    (32) statement -> . compound
    (33) statement -> . unlabeled_statement
    (34) statement -> . identifier COLON compound
    (35) statement -> . identifier COLON unlabeled_statement
    (52) compound -> . LBRACE unlabeled_statements RBRACE
    (36) unlabeled_statement -> . empty_statement
    (37) unlabeled_statement -> . repetitive
    (38) unlabeled_statement -> . conditional
    (39) unlabeled_statement -> . return_rule
    (40) unlabeled_statement -> . goto
    (41) unlabeled_statement -> . function_call_statement
    (42) unlabeled_statement -> . assignment
    (103) identifier -> . WRITE
    (104) identifier -> . READ
    (105) identifier -> . FALSE
    (106) identifier -> . TRUE
    (107) identifier -> . BOOLEAN
    (108) identifier -> . INTEGER
    (109) identifier -> . ID
    (48) empty_statement -> . SCOLON
    (51) repetitive -> . WHILE expression compound
    (49) conditional -> . IF LPAREN expression RPAREN compound
    (50) conditional -> . IF LPAREN expression RPAREN compound ELSE compound
    (46) return_rule -> . RETURN SCOLON
    (47) return_rule -> . RETURN expression SCOLON
    (45) goto -> . GOTO identifier SCOLON
    (90) function_call_statement -> . function_call
    (53) assignment -> . variable ASSIGN expression SCOLON
    (91) function_call -> . identifier LPAREN expression_list RPAREN
    (66) variable -> . ID LBRACKET expression RBRACKET
    (67) variable -> . ID
    RBRACE          reduce using rule 21 (statements -> .)
    LBRACE          shift and go to state 47
    WRITE           shift and go to state 5
    READ            shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    BOOLEAN         shift and go to state 9
    INTEGER         shift and go to state 10
    ID              shift and go to state 60
    SCOLON          shift and go to state 61
    WHILE           shift and go to state 62
    IF              shift and go to state 63
    RETURN          shift and go to state 64
    GOTO            shift and go to state 65

    statements                     shift and go to state 48
    statement                      shift and go to state 49
    compound                       shift and go to state 50
    unlabeled_statement            shift and go to state 51
    identifier                     shift and go to state 52
    empty_statement                shift and go to state 53
    repetitive                     shift and go to state 54
    conditional                    shift and go to state 55
    return_rule                    shift and go to state 56
    goto                           shift and go to state 57
    function_call_statement        shift and go to state 58
    assignment                     shift and go to state 59
    function_call                  shift and go to state 66
    variable                       shift and go to state 67

state 24

    (26) types -> TYPES . types_n
    (27) types_n -> . identifier ASSIGN vartype SCOLON
    (28) types_n -> . identifier ASSIGN vartype SCOLON types_n
    (103) identifier -> . WRITE
    (104) identifier -> . READ
    (105) identifier -> . FALSE
    (106) identifier -> . TRUE
    (107) identifier -> . BOOLEAN
    (108) identifier -> . INTEGER
    (109) identifier -> . ID
    WRITE           shift and go to state 5
    READ            shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    BOOLEAN         shift and go to state 9
    INTEGER         shift and go to state 10
    ID              shift and go to state 11

    types_n                        shift and go to state 68
    identifier                     shift and go to state 69

state 25

    (69) labels -> LABELS . identifier_list SCOLON
    (64) identifier_list -> . identifier COMMA identifier_list
    (65) identifier_list -> . identifier
    (103) identifier -> . WRITE
    (104) identifier -> . READ
    (105) identifier -> . FALSE
    (106) identifier -> . TRUE
    (107) identifier -> . BOOLEAN
    (108) identifier -> . INTEGER
    (109) identifier -> . ID
    WRITE           shift and go to state 5
    READ            shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    BOOLEAN         shift and go to state 9
    INTEGER         shift and go to state 10
    ID              shift and go to state 11

    identifier_list                shift and go to state 70
    identifier                     shift and go to state 71

state 26

    (23) variables -> VARS . variables_n
    (24) variables_n -> . identifier_list COLON vartype SCOLON
    (25) variables_n -> . identifier_list COLON vartype SCOLON variables_n
    (64) identifier_list -> . identifier COMMA identifier_list
    (65) identifier_list -> . identifier
    (103) identifier -> . WRITE
    (104) identifier -> . READ
    (105) identifier -> . FALSE
    (106) identifier -> . TRUE
    (107) identifier -> . BOOLEAN
    (108) identifier -> . INTEGER
    (109) identifier -> . ID
    WRITE           shift and go to state 5
    READ            shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    BOOLEAN         shift and go to state 9
    INTEGER         shift and go to state 10
    ID              shift and go to state 11

    variables_n                    shift and go to state 72
    identifier_list                shift and go to state 73
    identifier                     shift and go to state 71

state 27

    (29) functions -> FUNCTIONS . functions_n
    (30) functions_n -> . function
    (31) functions_n -> . function functions_n
    (2) function -> . VOID identifier formal_parameters block
    (3) function -> . identifier identifier formal_parameters block
    (103) identifier -> . WRITE
    (104) identifier -> . READ
    (105) identifier -> . FALSE
    (106) identifier -> . TRUE
    (107) identifier -> . BOOLEAN
    (108) identifier -> . INTEGER
    (109) identifier -> . ID
    VOID            shift and go to state 3
    WRITE           shift and go to state 5
    READ            shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    BOOLEAN         shift and go to state 9
    INTEGER         shift and go to state 10
    ID              shift and go to state 11

    functions_n                    shift and go to state 74
    function                       shift and go to state 75
    identifier                     shift and go to state 4

state 28

    (54) formal_parameters -> LPAREN formal_parameters_n . RPAREN
    RPAREN          shift and go to state 76


state 29

    (55) formal_parameters_n -> formal_parameter . SCOLON formal_parameters_n
    (56) formal_parameters_n -> formal_parameter .
    SCOLON          shift and go to state 77
    RPAREN          reduce using rule 56 (formal_parameters_n -> formal_parameter .)


state 30

    (58) formal_parameter -> function_parameter .
    SCOLON          reduce using rule 58 (formal_parameter -> function_parameter .)
    RPAREN          reduce using rule 58 (formal_parameter -> function_parameter .)


state 31

    (59) formal_parameter -> expression_parameter .
    SCOLON          reduce using rule 59 (formal_parameter -> expression_parameter .)
    RPAREN          reduce using rule 59 (formal_parameter -> expression_parameter .)


state 32

    (62) function_parameter -> VOID . identifier formal_parameters
    (103) identifier -> . WRITE
    (104) identifier -> . READ
    (105) identifier -> . FALSE
    (106) identifier -> . TRUE
    (107) identifier -> . BOOLEAN
    (108) identifier -> . INTEGER
    (109) identifier -> . ID
    WRITE           shift and go to state 5
    READ            shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    BOOLEAN         shift and go to state 9
    INTEGER         shift and go to state 10
    ID              shift and go to state 11

    identifier                     shift and go to state 78

state 33

    (63) function_parameter -> identifier . identifier formal_parameters
    (64) identifier_list -> identifier . COMMA identifier_list
    (65) identifier_list -> identifier .
    (103) identifier -> . WRITE
    (104) identifier -> . READ
    (105) identifier -> . FALSE
    (106) identifier -> . TRUE
    (107) identifier -> . BOOLEAN
    (108) identifier -> . INTEGER
    (109) identifier -> . ID
    COMMA           shift and go to state 80
    COLON           reduce using rule 65 (identifier_list -> identifier .)
    WRITE           shift and go to state 5
    READ            shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    BOOLEAN         shift and go to state 9
    INTEGER         shift and go to state 10
    ID              shift and go to state 11

    identifier                     shift and go to state 79

state 34

    (60) expression_parameter -> VAR . identifier_list COLON identifier
    (64) identifier_list -> . identifier COMMA identifier_list
    (65) identifier_list -> . identifier
    (103) identifier -> . WRITE
    (104) identifier -> . READ
    (105) identifier -> . FALSE
    (106) identifier -> . TRUE
    (107) identifier -> . BOOLEAN
    (108) identifier -> . INTEGER
    (109) identifier -> . ID
    WRITE           shift and go to state 5
    READ            shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    BOOLEAN         shift and go to state 9
    INTEGER         shift and go to state 10
    ID              shift and go to state 11

    identifier_list                shift and go to state 81
    identifier                     shift and go to state 71

state 35

    (61) expression_parameter -> identifier_list . COLON identifier
    COLON           shift and go to state 82


state 36

    (3) function -> identifier identifier formal_parameters block .
    $end            reduce using rule 3 (function -> identifier identifier formal_parameters block .)
    VOID            reduce using rule 3 (function -> identifier identifier formal_parameters block .)
    WRITE           reduce using rule 3 (function -> identifier identifier formal_parameters block .)
    READ            reduce using rule 3 (function -> identifier identifier formal_parameters block .)
    FALSE           reduce using rule 3 (function -> identifier identifier formal_parameters block .)
    TRUE            reduce using rule 3 (function -> identifier identifier formal_parameters block .)
    BOOLEAN         reduce using rule 3 (function -> identifier identifier formal_parameters block .)
    INTEGER         reduce using rule 3 (function -> identifier identifier formal_parameters block .)
    ID              reduce using rule 3 (function -> identifier identifier formal_parameters block .)
    LBRACE          reduce using rule 3 (function -> identifier identifier formal_parameters block .)


state 37

    (5) block -> types body .
    $end            reduce using rule 5 (block -> types body .)
    VOID            reduce using rule 5 (block -> types body .)
    WRITE           reduce using rule 5 (block -> types body .)
    READ            reduce using rule 5 (block -> types body .)
    FALSE           reduce using rule 5 (block -> types body .)
    TRUE            reduce using rule 5 (block -> types body .)
    BOOLEAN         reduce using rule 5 (block -> types body .)
    INTEGER         reduce using rule 5 (block -> types body .)
    ID              reduce using rule 5 (block -> types body .)
    LBRACE          reduce using rule 5 (block -> types body .)


state 38

    (10) block -> types functions . body
    (20) body -> . LBRACE statements RBRACE
    LBRACE          shift and go to state 23

    body                           shift and go to state 83

state 39

    (11) block -> types variables . body
    (15) block -> types variables . functions body
    (20) body -> . LBRACE statements RBRACE
    (29) functions -> . FUNCTIONS functions_n
    LBRACE          shift and go to state 23
    FUNCTIONS       shift and go to state 27

    body                           shift and go to state 84
    functions                      shift and go to state 85

state 40
